--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,9 @@
 {
-    "extends": [
-        "airbnb",
-        "prettier",
-        "prettier/react",
-        "plugin:prettier/recommended",
-        "eslint-config-prettier",
-        "@react-native-community"
-    ],
+    "extends": ["airbnb", "prettier", "prettier/react", "plugin:prettier/recommended", "eslint-config-prettier", "@react-native-community"],
     "parser": "babel-eslint",
     "rules": {
         "import/no-unresolved": "off",
+        "import/prefer-default-export": "off",
         "react/jsx-filename-extension": [
             1,
             {
@@ -20,8 +14,7 @@
             "error",
             {
                 "trailingComma": "es5",
-                "singleQuote": true,
-                "printWidth": 100
+                "singleQuote": true
             }
         ]
     },
