--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
     "extends": ["airbnb", "prettier", "prettier/react", "plugin:prettier/recommended", "eslint-config-prettier", "@react-native-community"],
     "parser": "babel-eslint",
     "rules": {
+        "no-param-reassign": 0,
         "import/no-unresolved": "off",
         "import/prefer-default-export": "off",
         "react/jsx-filename-extension": [
